--- a/index.css
+++ b/index.css
@@ -21,6 +21,10 @@ nav a {
     border-radius: 0.4rem;
 }
 
+nav a:hover {
+    filter: invert(100%);
+}
+
 .sign-up {
     background-color: #FF764E;
 }
